// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $10.94
  </h1>
</div>
`;

exports[`should render expensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $109,433.44
  </h1>
</div>
`;
